# sco_py

./: .gitignore  README.md  pyproject.toml
.github/: publish.yaml
.github/workflows/: ci.yaml  publish.yaml
pysco/sco_gurobi/: prob.py
pysco/sco_osqp/: osqp_utils.py  prob.py
sco/sco_gurobi/: solver.py
sco/sco_osqp/: osqp_utils.py
sco_gurobi/: prob.py  solver.py
sco_gurobi/sco_gurobi/: expr.py  prob.py  variable.py
sco_gurobi/sco_gurobi/test/: test_expr.py  test_solver.py
sco_osqp/: expr.py  osqp_utils.py  prob.py  solver.py
sco_osqp/sco_OSQP/: osqp_utils.py  prob.py  solver.py  variable.py
sco_osqp/sco_OSQP/test/: test_expr.py  test_prob.py  test_solver.py  test_variable.py
sco_osqp/src/: boost-python.cmake  csco.cpp  numpy_utils.hpp
sco_py/sco_gurobi/: prob.py
sco_py/sco_osqp/: osqp_utils.py  prob.py  solver.py
src/: CMakeLists.txt
tests/sco_gurobi/: test_expr.py  test_prob.py  test_solver.py  test_variable.py
tests/sco_osqp/: test_expr.py  test_prob.py  test_solver.py  test_variable.py
