[tool.poetry]
name = "sco"
version = "0.1.0"
description = "A Sequential Convex Optimization library for solving non-convex optimization problems. Intended for use with the OpenTAMP planning system."
authors = ["Nishanth Kumar <njk@csail.mit.edu>", "Michael McDonald", "Christoper Lin", "Dylan Hadfield-Menell <dhm@csail.mit.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
osqp = "^0.6.2"
scipy = "^1.7.2"
pytest = "^6.2.5"
numdifftools = "^0.9.40"
gurobipy = ">=9.0.0,<9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
